# crystal-geometry

./: CMakeLists.txt  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  pypi-publish.yml  release.yml  security.yml
docs/: api.md
src/crystal_geometry/: __init__.py  _accel.py  _optim.py  aggregates.py  amorphous.py  geometry.py  models.py  modifications.py  symmetry.py
src/crystal_geometry/_native/: CMakeLists.txt
src/crystal_geometry/habits/: base.py  cubic.py  hexagonal.py  orthorhombic.py  registry.py  special.py  tetragonal.py
src/crystal_geometry/twins/: generators.py  laws.py  transforms.py
tests/: test_aggregates.py  test_amorphous.py  test_geometry.py  test_habits.py  test_modifications.py  test_nested_growth.py  test_twins.py
