[project]
name = "gemmology-crystal-geometry"
version = "1.0.0"
description = "3D crystal geometry engine for crystallographic visualization"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Fabian Schuh", email = "fabian@gemmology.dev" }
]
maintainers = [
    { name = "Fabian Schuh", email = "fabian@gemmology.dev" }
]
keywords = [
    "crystallography",
    "mineralogy",
    "gemmology",
    "geometry",
    "polyhedra",
    "crystal",
    "visualization",
    "3d"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed"
]
dependencies = [
    "gemmology-cdl-parser>=1.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.urls]
Homepage = "https://crystal-geometry.gemmology.dev"
Documentation = "https://crystal-geometry.gemmology.dev/docs"
Repository = "https://github.com/gemmology-dev/crystal-geometry"
Issues = "https://github.com/gemmology-dev/crystal-geometry/issues"
Changelog = "https://github.com/gemmology-dev/crystal-geometry/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
crystal_geometry = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long
    "E741",  # ambiguous variable name (h, k, l and I are standard crystallographic notation)
]

[tool.ruff.lint.isort]
known-first-party = ["crystal_geometry", "cdl_parser"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = false  # numpy operations often return Any
warn_unused_ignores = true
ignore_missing_imports = true  # scipy stubs not always available
disable_error_code = ["type-arg"]  # numpy ndarray type parameters

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/crystal_geometry"]
branch = true
